Speed up setupDecompWorkspace at cost of broken Eclipse classpath on very first gradle run

--- a/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -23,7 +23,7 @@
 # The original copy of hardcorealchemy_at.cfg is in core/src/main/resources/META-INF
 # If you modify the file anywhere else, IT WILL BE REPLACED with the copy of the file in core
 # Simply edit the version of the file in core/src/main/resources/META-INF
-# Then run your setupDecompWorkspace or build command as you normally would
+# Then run your setupDecompWorkspace, eclipse, and/or build command(s) as you normally would
 
 ######################################
 # Hardcore Alchemy Core Transformers #
