--- a/magic/build.gradle
+++ b/magic/build.gradle
@@ -73,14 +73,23 @@ task setupRunConfig(type: Copy) {
     into "run/config"
 }
 setupDecompWorkspace.dependsOn setupRunConfig
-
-// Hack to inherit access transformers from core, so the decompiled Minecraft jar that this subproject depends on is effectively the same as the one in core.
+// Need to also have an (unused) access transformer file in this project so that the eclipse classpath uses the patched Minecraft jar
 task copyAccessTransformerFromCore(type: Copy) {
     from "../core/src/main/resources/META-INF/hardcorealchemy_at.cfg"
     into "src/main/resources/META-INF"
 }
 setupDecompWorkspace.dependsOn copyAccessTransformerFromCore
 processResources.dependsOn copyAccessTransformerFromCore
+
+// Hack to inherit recompiled Minecraft files with access transformers applied from core, so the decompiled Minecraft jar that this subproject depends on is effectively the same as the one in core.
+task setupDecompWorkspace(type: Copy, overwrite: true, dependsOn: project(":core").setupDecompWorkspace) {
+    from "../core/.gradle/minecraft/"
+    into ".gradle/minecraft/"
+    rename { String fileName ->
+        fileName.replace("(core)", "(${project.name})")
+    }
+}
+tasks["eclipse"].dependsOn setupDecompWorkspace
 
 jar {
     manifest {
