Fix vanilla bug with melee damage and arrows applying effects or fire through shields
Fixes attacks from:

- Fire arrows
- Wither skeletons
- Cave Spiders
- Husks

--- a/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -16,12 +16,12 @@
 # along with Hardcore Alchemy.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-###############################################
-# WARNING (for development environments only) #
-###############################################
+#################################
+# WARNING (for developers only) #
+#################################
 
-# The original copy of hardcorealchemy_at.cfg is in core/src/main/resources/META-INF
-# If you modify the file anywhere else, IT WILL BE REPLACED with the copy of the file in core
+# All submods use the same hardcorealchemy_at.cfg file in core/src/main/resources/META-INF
+# If you try to create an access transformer file outside of the core project, IT WILL BE IGNORED
 # Simply edit the version of the file in core/src/main/resources/META-INF
 # Then run your setupDecompWorkspace, eclipse, and/or build command(s) as you normally would
 
@@ -70,3 +70,6 @@ public-f net.minecraft.inventory.InventoryCrafting field_70465_c #eventHandler
 public-f net.minecraft.entity.Entity field_71087_bX #inPortal
 # Rendering of portal animation while under voidfade effect
 public net.minecraft.client.gui.GuiIngame func_180474_b(FLnet/minecraft/client/gui/ScaledResolution;)V #renderPortal but with slashes
+# Helpers to prevent applying potion effects and fire when the corresponding DamageSource is blocked by a shield
+public net.minecraft.entity.EntityLivingBase func_184583_d(Lnet/minecraft/util/DamageSource;)Z #canBlockDamageSource
+public net.minecraft.entity.Entity field_70151_c #fire
