--- a/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -73,3 +73,7 @@ public net.minecraft.client.gui.GuiIngame func_180474_b(FLnet/minecraft/client/g
 # Helpers to prevent applying potion effects and fire when the corresponding DamageSource is blocked by a shield
 public net.minecraft.entity.EntityLivingBase func_184583_d(Lnet/minecraft/util/DamageSource;)Z #canBlockDamageSource
 public net.minecraft.entity.Entity field_70151_c #fire
+# Helpers for manipulating inventory for slip effect
+public net.minecraft.inventory.ContainerPlayer field_82862_h #player
+# Doesn't actually store the item. Indicates what slot the item can be stored in
+public net.minecraft.entity.player.InventoryPlayer func_70432_d(Lnet/minecraft/item/ItemStack;)I # storeItemStack
