Add timefrozen items, overhaul virtual capability system
Timefrozen items are in an uninteractable state. Food does not decay, soulbound items are lost, clocks freeze, etc.

Overhauled virtual capabilities to make them theoretically more performant, since timefrozen items must access item data every frame for rendering.

--- a/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -1,5 +1,5 @@
 #
-# Copyright 2017-2021 asanetargoss
+# Copyright 2017-2022 asanetargoss
 # 
 # This file is part of Hardcore Alchemy.
 # 
@@ -77,3 +77,5 @@ public net.minecraft.entity.Entity field_70151_c #fire
 public net.minecraft.inventory.ContainerPlayer field_82862_h #player
 # Doesn't actually store the item. Indicates what slot the item can be stored in
 public net.minecraft.entity.player.InventoryPlayer func_70432_d(Lnet/minecraft/item/ItemStack;)I # storeItemStack
+# For item render override hacks (ex: Timefrozen)
+public net.minecraft.client.gui.GuiIngame field_73841_b # itemRenderer
