Disable Tough As Nails heart mechanic in testing config, now that Hardcore Alchemy's has its own heart mechanic

--- a/testconfig/toughasnails/gameplay.cfg
+++ b/testconfig/toughasnails/gameplay.cfg
@@ -5,7 +5,7 @@
     B:"Enable Body Temperature"=false
 
     # Players begin with a lowered maximum health. [default: true]
-    B:"Enable Lowered Starting Health"=true
+    B:"Enable Lowered Starting Health"=false
 
     # Seasons progress as days increase [default: true]
     B:"Enable Seasons"=true
