Rename gradle _modpack project to _capstone. Fix the gradle race condition that rears its head as a result.

--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,13 @@ task exportModsToDev(type: Copy) {
     dependsOn ":creatures:build"
     dependsOn ":magic:build"
     dependsOn ":survival:build"
-    dependsOn ":modpack:build"
+    dependsOn ":capstone:build"
 
     from ("core/build/libs/${project(":core").jarLabel}-${project(":core").version}.jar")
     from ("tweaks/build/libs/${project(":tweaks").jarLabel}-${project(":tweaks").version}.jar")
     from ("creatures/build/libs/${project(":creatures").jarLabel}-${project(":creatures").version}.jar")
     from ("magic/build/libs/${project(":magic").jarLabel}-${project(":magic").version}.jar")
     from ("survival/build/libs/${project(":survival").jarLabel}-${project(":survival").version}.jar")
-    from ("modpack/build/libs/${project(":modpack").jarLabel}-${project(":modpack").version}.jar")
+    from ("capstone/build/libs/${project(":capstone").jarLabel}-${project(":capstone").version}.jar")
     into(modpack_dev_dir)
 }
