--- a/capstone/build.gradle
+++ b/capstone/build.gradle
@@ -41,14 +41,14 @@ minecraft {
     
     mappings = "stable_29"
     
-    replace "@HARDCORE_ALCHEMY_MODPACK_VERSION@", project.version
-    replaceIn "HardcoreAlchemyModpack.java"
+    replace "@HARDCORE_ALCHEMY_CAPSTONE_VERSION@", project.version
+    replaceIn "HardcoreAlchemyCapstone.java"
     replace "\"required-before:\" + HardcoreAlchemy.MOD_ID", "\"required-before:\" + HardcoreAlchemy.MOD_ID + \"@[\" + HardcoreAlchemy.VERSION + \",)\""
     replace "\"required-after:\" + HardcoreAlchemyTweaks.MOD_ID", "\"required-after:\" + HardcoreAlchemyTweaks.MOD_ID + \"@[\" + HardcoreAlchemyTweaks.VERSION + \",)\""
     replace "\"required-after:\" + HardcoreAlchemyCreatures.MOD_ID", "\"required-after:\" + HardcoreAlchemyCreatures.MOD_ID + \"@[\" + HardcoreAlchemyCreatures.VERSION + \",)\""
     replace "\"required-after:\" + HardcoreAlchemyMagic.MOD_ID", "\"required-after:\" + HardcoreAlchemyMagic.MOD_ID + \"@[\" + HardcoreAlchemyMagic.VERSION + \",)\""
     replace "\"required-after:\" + HardcoreAlchemySurvival.MOD_ID", "\"required-after:\" + HardcoreAlchemySurvival.MOD_ID + \"@[\" + HardcoreAlchemySurvival.VERSION + \",)\""
-    replaceIn "HardcoreAlchemyModpack.java"
+    replaceIn "HardcoreAlchemyCapstone.java"
 
     clientJvmArgs += [
         "-Dfml.coreMods.load=" +
