Add compilelibs/capstone to capstone dependencies so some dependencies can be moved to compilelibs

--- a/capstone/build.gradle
+++ b/capstone/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compileOnly fileTree(dir: "../compilelibs/creatures", include: "**/*.jar")
     compileOnly fileTree(dir: "../compilelibs/magic", include: "**/*.jar")
     compileOnly fileTree(dir: "../compilelibs/survival", include: "**/*.jar")
+    compileOnly fileTree(dir: "../compilelibs/capstone", include: "**/*.jar")
 }
 
 sourceSets.main.resources.srcDirs += ["../translations/capstone"]
