Increase gradle RAM to 4GB. The license checker plugin (and possibly the large number of projects) seems to have pushed the JVM to its limit

--- a/creatures/gradle.properties
+++ b/creatures/gradle.properties
@@ -1,6 +1,8 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+#org.gradle.jvmargs=-Xmx3G
+# Bumping this up to 4 because these gradle scripts are getting complicated...
+org.gradle.jvmargs=-Xmx4G
 version=0.2.0
 group=targoss.hardcorealchemy.creatures
 jarLabel=hardcorealchemy_creatures
