--- a/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -52,6 +52,10 @@ public net.minecraft.client.entity.EntityPlayerSP field_189811_cr #autoJumpEnabl
 # Used to check what item slot the mouse is currently hovering over
 public net.minecraft.client.gui.inventory.GuiContainer field_147006_u #theSlot
 
+# Compile-time check for setting slime size
+public net.minecraft.entity.monster.EntitySlime func_70799_a(I)V #setSlimeSize
+public net.minecraft.entity.monster.EntityMagmaCube func_70799_a(I)V #setSlimeSize
+
 # Needed for tests
 public net.minecraft.entity.monster.EntityZombie field_110186_bp #SPAWN_REINFORCEMENTS_CHANCE
 
