--- a/capstone/build.gradle
+++ b/capstone/build.gradle
@@ -160,6 +160,7 @@ task buildModSuite(type: Zip) {
     from ("../creatures/build/libs/${project(":creatures").jarLabel}-${project(":creatures").version}.jar")
     from ("../magic/build/libs/${project(":magic").jarLabel}-${project(":magic").version}.jar")
     from ("../survival/build/libs/${project(":survival").jarLabel}-${project(":survival").version}.jar")
+    from ("../capstone/build/libs/${project(":capstone").jarLabel}-${project(":capstone").version}.jar")
     from ("build/libs/${project(":capstone").jarLabel}-${project(":capstone").version}.jar")
     into("libs") {
     }
