--- a/magic/build.gradle
+++ b/magic/build.gradle
@@ -45,7 +45,7 @@ minecraft {
     replace "@HARDCORE_ALCHEMY_MAGIC_VERSION@", project.version
     replaceIn "HardcoreAlchemyMagic.java"
 
-    replace "\"required-before:\" + HardcoreAlchemy.MOD_ID", "\"required-before:\" + HardcoreAlchemy.MOD_ID + \"@[\" + HardcoreAlchemy.VERSION + \"]\""
+    replace "\"required-before:\" + HardcoreAlchemyCore.MOD_ID", "\"required-before:\" + HardcoreAlchemyCore.MOD_ID + \"@[\" + HardcoreAlchemyCore.VERSION + \"]\""
     replaceIn "HardcoreAlchemyMagic.java"
 
     clientJvmArgs += ["-Dfml.coreMods.load=targoss.hardcorealchemy.coremod.HardcoreAlchemyCoreCoremod,${coremodPath}"]
