Fix wrong group for capstone

--- a/capstone/gradle.properties
+++ b/capstone/gradle.properties
@@ -4,5 +4,5 @@
 # Bumping this up to 4 because these gradle scripts are getting complicated...
 org.gradle.jvmargs=-Xmx4G
 version=0.8.0
-group=targoss.hardcorealchemy.modpack
+group=targoss.hardcorealchemy.capstone
 jarLabel=hardcorealchemy_capstone
