Enable asserts in mod dev
For some reason, these gradle changes don't reliably propagate to the Eclipse java debug arguments in an existing gradle setup. I have to call gradle tasks individually (./gradlew creatures:setupDecompWorkspace creatures:eclipse , etc...) in order for gradle to properly re-run and set the new arguments.

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -55,9 +55,11 @@ minecraft {
     replace "@HARDCORE_ALCHEMY_CORE_VERSION@", project.version
     replaceIn "HardcoreAlchemyCore.java"
 
-    // These arguments let us load the coremod properly when testing in a dev environment
-    clientJvmArgs = ["-Dfml.coreMods.load=" + coremodPath]
-    serverJvmArgs = ["-Dfml.coreMods.load=" + coremodPath]
+    String jvmArgs = " " +
+        "-Dfml.coreMods.load=${coremodPath}" + " " +
+        "-enableassertions:targoss.hardcorealchemy..." + " "
+    clientJvmArgs += jvmArgs;
+    serverJvmArgs += jvmArgs;
 }
 
 dependencies {
