--- a/capstone/build.gradle
+++ b/capstone/build.gradle
@@ -50,22 +50,16 @@ minecraft {
     replace "\"required-after:\" + HardcoreAlchemySurvival.MOD_ID", "\"required-after:\" + HardcoreAlchemySurvival.MOD_ID + \"@[\" + HardcoreAlchemySurvival.VERSION + \",)\""
     replaceIn "HardcoreAlchemyCapstone.java"
 
-    clientJvmArgs += [
+    String jvmArgs = " " +
         "-Dfml.coreMods.load=" +
-        "targoss.hardcorealchemy.coremod.HardcoreAlchemyCoreCoremod," +
-        "targoss.hardcorealchemy.tweaks.coremod.HardcoreAlchemyTweaksCoremod," +
-        "targoss.hardcorealchemy.creatures.coremod.HardcoreAlchemyCreaturesCoremod," +
-        "targoss.hardcorealchemy.magic.coremod.HardcoreAlchemyMagicCoremod," +
-        "targoss.hardcorealchemy.survival.coremod.HardcoreAlchemySurvivalCoremod"
-    ]
-    serverJvmArgs += [
-        "-Dfml.coreMods.load=" +
-        "targoss.hardcorealchemy.coremod.HardcoreAlchemyCoreCoremod," +
-        "targoss.hardcorealchemy.tweaks.coremod.HardcoreAlchemyTweaksCoremod," +
-        "targoss.hardcorealchemy.creatures.coremod.HardcoreAlchemyCreaturesCoremod," +
-        "targoss.hardcorealchemy.magic.coremod.HardcoreAlchemyMagicCoremod," +
-        "targoss.hardcorealchemy.survival.coremod.HardcoreAlchemySurvivalCoremod"
-    ]
+            "targoss.hardcorealchemy.coremod.HardcoreAlchemyCoreCoremod," +
+            "targoss.hardcorealchemy.tweaks.coremod.HardcoreAlchemyTweaksCoremod," +
+            "targoss.hardcorealchemy.creatures.coremod.HardcoreAlchemyCreaturesCoremod," +
+            "targoss.hardcorealchemy.magic.coremod.HardcoreAlchemyMagicCoremod," +
+            "targoss.hardcorealchemy.survival.coremod.HardcoreAlchemySurvivalCoremod" + " " +
+        "-enableassertions:targoss.hardcorealchemy..." + " "
+    clientJvmArgs += jvmArgs;
+    serverJvmArgs += jvmArgs;
 }
 
 dependencies {
